# ql-rust

./: AAD-PROPOSAL.md  BENCHMARK-RESULTS.md  CHANGELOG.md  Cargo.toml  GAP-ANALYSIS.md  LICENSE-APACHE  LICENSE-MIT  README.md  clippy.toml  implementation-plan.md  project.md  secdb-beacon-summary.md  verification.md
crates/ql-aad/: Cargo.toml
crates/ql-aad/benches/: aad_benchmarks.rs
crates/ql-aad/src/: bates.rs  bs.rs  cashflows.rs  checkpoint.rs  complex.rs  curves.rs  dual.rs  dual_vec.rs  heston.rs  integrate.rs  interp.rs  jit.rs  lib.rs  lrm.rs  math.rs  mc.rs  nalgebra_impl.rs  number.rs  portfolio.rs  reactive.rs  simd.rs  simd_jit.rs  solvers.rs  tape.rs
crates/ql-cashflows/: Cargo.toml
crates/ql-cashflows/src/: average_ois_coupon.rs  cashflow.rs  cashflow_analytics.rs  cashflow_analytics_extended.rs  cashflows_extended.rs  cashflows_phase23.rs  cms_coupon.rs  cms_pricer.rs  cms_spread_coupon.rs  coupon.rs  coupon_pricer.rs  cpi_coupon.rs  digital_coupon.rs  dividend.rs  fixed_rate_coupon.rs  ibor_coupon.rs  indexed_cashflow.rs  leg.rs  lib.rs  multiple_resets_coupon.rs  overnight_coupon.rs  simple_cashflow.rs
crates/ql-cli/: Cargo.toml
crates/ql-cli/src/: main.rs
crates/ql-cli/tests/: cli_integration.rs
crates/ql-core/: Cargo.toml
crates/ql-core/src/: engine.rs  errors.rs  handle.rs  lazy.rs  lib.rs  market_data.rs  number.rs  observable.rs  portfolio.rs  quote.rs  settings.rs  types.rs
crates/ql-currencies/: Cargo.toml
crates/ql-currencies/src/: currency.rs  exchange_rate.rs  lib.rs  money.rs
crates/ql-indexes/: Cargo.toml
crates/ql-indexes/src/: bma_index.rs  equity_index.rs  ibor_index.rs  index.rs  inflation_index.rs  inflation_indexes.rs  interest_rate.rs  lib.rs  overnight_index.rs  swap_index.rs
crates/ql-instruments/: Cargo.toml
crates/ql-instruments/src/: amortizing_bond.rs  amortizing_floating_rate_bond.rs  asian_option.rs  asset_swap.rs  barrier_option.rs  basis_swap.rs  bma_swap.rs  bond.rs  bond_forward.rs  callable_bond.rs  cap_floor.rs  cat_bond.rs  cds_index.rs  chooser_option.rs  cliquet_option.rs  commodity.rs  complex_chooser_option.rs  composite_instrument.rs  compound_option.rs  convertible_bond.rs  cpi_swap.rs  credit_default_swap.rs  credit_portfolio_instruments.rs  cross_currency_swap.rs  double_barrier_option.rs  floating_rate_bond.rs  fra.rs  fx_forward.rs  inflation_cap_floor.rs  inflation_linked_bond.rs  instrument.rs  instruments_extended.rs  lib.rs  lookback_option.rs  nonstandard_swap.rs  ois_swap.rs  overnight_index_future.rs  payoff.rs  perpetual_futures.rs  quanto_option.rs  (+9 more)
crates/ql-math/: Cargo.toml
crates/ql-math/src/: abcd.rs  black_delta.rs  brownian_bridge.rs  bspline.rs  chebyshev.rs  copulas.rs  distributions.rs  fft.rs  generic.rs  halton.rs  integration.rs  integration_advanced.rs  integration_extended.rs  interpolation.rs  interpolation_advanced.rs  interpolation_extended.rs  lib.rs  math_extended.rs  math_phase22_a.rs  math_phase22_b.rs  matrix.rs  ode.rs  optimization.rs  quasi_random.rs  richardson.rs  rng_extended.rs  solvers1d.rs  solvers1d_extended.rs  sparse.rs  special_functions.rs  statistics.rs
crates/ql-methods/: Cargo.toml
crates/ql-methods/src/: fdm_extended.rs  fdm_infrastructure.rs  fdm_meshers.rs  fdm_meshers_extended.rs  fdm_operators.rs  fdm_operators_extended.rs  fdm_schemes.rs  finite_differences.rs  generic.rs  lattice.rs  lattice_2d.rs  lib.rs  mc_control_variates.rs  mc_engines.rs  monte_carlo.rs
crates/ql-models/: Cargo.toml
crates/ql-models/src/: basis_model.rs  bates_model.rs  black_karasinski.rs  calibrated_model.rs  cir.rs  g2_model.rs  gjr_garch_model.rs  gsr.rs  heston_model.rs  hull_white_model.rs  lib.rs  lmm.rs  lmm_advanced.rs  lmm_extensions.rs  lmm_framework.rs  models_extended.rs  parameter.rs  ptd_heston_model.rs  variance_gamma_model.rs  vasicek.rs  vol_estimators.rs
crates/ql-persistence/: Cargo.toml
crates/ql-persistence/src/: domain.rs  embedded_store.rs  lib.rs  memory_store.rs  store.rs
crates/ql-pricingengines/: Cargo.toml
crates/ql-pricingengines/src/: advanced_exotics.rs  american_engines.rs  analytic_asian.rs  analytic_bates.rs  analytic_binary_barrier.rs  analytic_european.rs  analytic_heston.rs  analytic_vanilla_extra.rs  barrier_mc_tree.rs  basket_engines.rs  bsm_hull_white.rs  callable_bond_engine.rs  cap_floor_engines.rs  cds_engine.rs  cds_index_engine.rs  choi_asian.rs  chooser_engine.rs  cliquet_engine.rs  compound_engine.rs  convertible_bond_engine.rs  cos_heston.rs  credit_extensions.rs  credit_models.rs  credit_portfolio.rs  cva_swap_engine.rs  digital_american.rs  discounting.rs  double_barrier_engine.rs  double_binary_barrier.rs  engine_adapters.rs  engines_extended.rs  exotic_options.rs  fd_2d_engine.rs  fd_asian.rs  fd_bs_barrier.rs  fd_engines_extended.rs  fd_g2_swaption.rs  fd_heston_barrier.rs  fd_vanilla_extensions.rs  fx_forward_engine.rs  (+43 more)
crates/ql-processes/: Cargo.toml
crates/ql-processes/src/: bates_process.rs  black_scholes_process.rs  cir_process.rs  g2_process.rs  geometric_brownian_motion.rs  gjr_garch_process.rs  heston_process.rs  heston_slv_process.rs  hull_white_process.rs  hybrid_heston_hull_white.rs  lib.rs  merton76_process.rs  process.rs  process_array.rs  processes_extended.rs
crates/ql-python/: Cargo.toml  pyproject.toml
crates/ql-python/src/: fixed_income.rs  instruments.rs  lib.rs  pricing.rs  termstructures.rs  time.rs  types.rs
crates/ql-python/tests/: test_ql_python.py
crates/ql-rust/: Cargo.toml
crates/ql-rust/benches/: ql_benchmarks.rs
crates/ql-rust/examples/: bootstrap_yield_curve.rs  calibrate_heston.rs  end_to_end.rs  price_european_option.rs  production_workflow.rs  (+2 more)
crates/ql-termstructures/: Cargo.toml
crates/ql-time/: Cargo.toml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_american.rs  fuzz_asian.rs  fuzz_bs_pricing.rs  fuzz_date.rs  fuzz_exotic_equity.rs  fuzz_heston_bates.rs  fuzz_interpolation.rs  fuzz_merton_jd.rs  fuzz_multi_asset.rs  fuzz_numerical.rs  fuzz_sabr.rs  fuzz_schedule.rs  fuzz_serde_instruments.rs  fuzz_serde_termstructures.rs
(+100 files in other folders)
