[package]
name = "ql-aad"
version = "0.1.0"
edition = "2021"
description = "Adjoint Algorithmic Differentiation (AAD) for ql-rust — forward-mode dual numbers, reverse-mode tape, and generic Number trait"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jude-codebase/ql-rust"

[features]
default = []
jit = [
    "dep:cranelift-codegen",
    "dep:cranelift-frontend",
    "dep:cranelift-jit",
    "dep:cranelift-module",
    "dep:cranelift-native",
]
nalgebra = [
    "dep:nalgebra",
    "dep:simba",
    "dep:num-traits",
    "dep:approx",
]
reactive = []

[dependencies]
ql-core = { path = "../ql-core" }
smallvec = "1"
rand = { workspace = true }
rand_distr = { workspace = true }

# Cranelift JIT (optional — enabled by `jit` feature)
cranelift-codegen = { version = "0.129", optional = true }
cranelift-frontend = { version = "0.129", optional = true }
cranelift-jit = { version = "0.129", optional = true }
cranelift-module = { version = "0.129", optional = true }
cranelift-native = { version = "0.129", optional = true }

# nalgebra integration (optional — enabled by `nalgebra` feature)
nalgebra = { workspace = true, optional = true }
simba = { version = "0.9", optional = true }
num-traits = { version = "0.2", optional = true }
approx = { workspace = true, optional = true }

# Reactive portfolio bridge (optional — enabled by `reactive` feature)
# ql-core is now always available (Number trait moved there)

[dev-dependencies]
approx = { workspace = true }
criterion = { workspace = true }
nalgebra = { workspace = true }

[[bench]]
name = "aad_benchmarks"
harness = false
