[package]
name = "ql-cashflows"
version = "0.1.0"
edition = "2021"
description = "Cash flows, coupons, legs, and coupon pricers for ql-rust"
license = "MIT OR Apache-2.0"

[dependencies]
ql-core = { workspace = true }
ql-time = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
