[package]
name = "ql-cashflows"
version = "0.1.0"
edition = "2021"
description = "Cash flows, coupons, legs, and coupon pricers for ql-rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jude-codebase/ql-rust"

[dependencies]
ql-core = { workspace = true }
ql-time = { workspace = true }
ql-math = { path = "../ql-math" }
ql-indexes = { path = "../ql-indexes" }
ql-termstructures = { path = "../ql-termstructures" }
serde = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
serde_json = { workspace = true }
