[package]
name = "ql-currencies"
version = "0.1.0"
edition = "2021"
description = "Currency, Money, and ExchangeRate for ql-rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jude-codebase/ql-rust"

[dependencies]
ql-core = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
