[package]
name = "ql-indexes"
version = "0.1.0"
edition = "2021"
description = "Financial index traits and implementations (IBOR, overnight, swap, inflation)"
license = "MIT OR Apache-2.0"

[dependencies]
ql-core = { workspace = true }
ql-time = { workspace = true }
ql-currencies = { path = "../ql-currencies" }
serde = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
