[package]
name = "ql-instruments"
version = "0.1.0"
edition = "2021"
description = "Financial instrument traits and implementations for ql-rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jude-codebase/ql-rust"

[dependencies]
ql-core = { workspace = true }
ql-time = { workspace = true }
ql-math = { path = "../ql-math" }
ql-indexes = { path = "../ql-indexes" }
ql-termstructures = { path = "../ql-termstructures" }
ql-cashflows = { path = "../ql-cashflows" }
ql-currencies = { path = "../ql-currencies" }
serde = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
serde_json = { workspace = true }
