[package]
name = "ql-persistence"
version = "0.1.0"
edition = "2021"
description = "SecDB/Beacon-style persistence layer for ql-rust"
license = "MIT OR Apache-2.0"

[dependencies]
ql-core = { workspace = true }
ql-time = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
redb = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
tempfile = { workspace = true }
