[package]
name = "ql-pricingengines"
version = "0.1.0"
edition = "2021"
description = "Pricing engine traits and implementations for ql-rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jude-codebase/ql-rust"

[dependencies]
ql-core = { workspace = true }
ql-time = { workspace = true }
ql-math = { path = "../ql-math" }
ql-indexes = { path = "../ql-indexes" }
ql-termstructures = { path = "../ql-termstructures" }
ql-cashflows = { path = "../ql-cashflows" }
ql-instruments = { path = "../ql-instruments" }
ql-processes = { path = "../ql-processes" }
ql-models = { path = "../ql-models" }
ql-methods = { path = "../ql-methods" }
nalgebra = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
rayon = { workspace = true, optional = true }
serde = { workspace = true }
tracing = { workspace = true }

[features]
default = ["parallel"]
parallel = ["rayon"]

[dev-dependencies]
approx = { workspace = true }
ql-currencies = { path = "../ql-currencies" }
