[package]
name = "ql-processes"
version = "0.1.0"
edition = "2021"
description = "Stochastic process traits and implementations for ql-rust"
license = "MIT OR Apache-2.0"

[dependencies]
ql-core = { workspace = true }
ql-time = { workspace = true }
ql-math = { path = "../ql-math" }
ql-termstructures = { path = "../ql-termstructures" }
nalgebra = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
