[package]
name = "ql-rust"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jude-codebase/ql-rust"
description = "QuantLib for Rust – convenience facade crate"

[dependencies]
ql-core = { workspace = true }
ql-time = { workspace = true }
ql-math = { workspace = true }
ql-currencies = { workspace = true }
ql-indexes = { workspace = true }
ql-termstructures = { workspace = true }
ql-cashflows = { workspace = true }
ql-instruments = { workspace = true }
ql-processes = { workspace = true }
ql-models = { workspace = true }
ql-pricingengines = { workspace = true }
ql-methods = { workspace = true }
ql-persistence = { workspace = true }
serde_json = { workspace = true }

[features]
default = ["parallel", "redb"]
parallel = ["ql-methods/parallel", "ql-pricingengines/parallel"]
redb = ["ql-persistence/redb"]

[dev-dependencies]
approx = { workspace = true }
tempfile = { workspace = true }
proptest = { workspace = true }
serde_json = { workspace = true }
criterion = { workspace = true }
ql-aad = { workspace = true }

[[bench]]
name = "ql_benchmarks"
harness = false
