[package]
name = "ql-time"
version = "0.1.0"
edition = "2021"
description = "Date, Calendar, DayCounter, Schedule, and Period for ql-rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jude-codebase/ql-rust"

[dependencies]
ql-core = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
